# RKMediaGateway

./: .gitgnore  .gitignore  CMakeLists.txt  README.md
bussiness/gb28181/inc/: gb28181Device.h  gb28181Sink.h
bussiness/gb28181/src/: gb28181Device.c  gb28181Sink.c
bussiness/logger/inc/: logger.h
bussiness/logger/src/: logger.c
bussiness/mediaGateway/inc/: mediaGateway.h  mediaGatewayCaptureWorker.h  mediaPacket.h  mediaSink.h
bussiness/mediaGateway/src/: mediaGateway.c  mediaGatewayCaptureWorker.c  mediaPacket.c  mediaSink.c
bussiness/mppEncoder/inc/: mppEncoder.h
bussiness/mppEncoder/src/: mppEncoder.c
bussiness/rtmpStreamer/inc/: rtmpSink.h
bussiness/rtmpStreamer/src/: rtmpSink.c
bussiness/rtspStreamer/inc/: rtspSink.h  rtspStreamer.h
bussiness/rtspStreamer/src/: rtspSink.c  rtspStreamer.c
bussiness/v4l2Capture/inc/: v4l2Capture.h
bussiness/v4l2Capture/src/: v4l2Capture.c
main/: main.cpp  main_all_services.cpp  main_dual_output_test.cpp  main_gb28181_device.cpp  main_mpp_h264_test.cpp  main_v4l2Capture_test.cpp  main_video0_fps_test.cpp  rtsp_gateway.conf  simple_config.h
test/rtsp/: README.md  rtsp_e2e_benchmark.py
